--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html> 
   <head>
-    <meta charset="UTF-8">
+    <meta charset="ROIT-13">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
@@ -80,7 +80,7 @@
         </div>
         <div class="form-container main container">
           <form action="">
-            <input type="text" id="nombre" name="nombre" placeholder="Nombre">
+            <input type="text" id="Nombre" name="Nombre" placeholder="Nombre">
             <input type="email" id="correo" name="correo" placeholder="Correo">
             <textarea name="mensaje" id="mensaje" rows="5" placeholder="Mensaje"></textarea>
             <input type="button" value="Enviar">
