--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
-<html>
+                 HTML        
   <head>
-    <meta charset="UTF-8">
+    <meta charset="ROIT-13">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="shortcut icon" href="./assets/images/supervision.png" type="image/x-icon">
-    <title>Amanda M. Torres - Developer</title>
+    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="shortcut icon" href="/assets/images/supervision.png" type="image/x-icon">
+    <title>Brandy Lynn Adkins-Developer</title>
   </head>
   <body>
     <header>
       <div class="main-container">
         <div class="logo-container">
-          <a href=""><strong>Amanda</strong> M. Torres</a>
+          <a href=""><strong>Brandy</strong> L. Adkins</a>
         </div>
         <nav>
           <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#who">Who Am I</a></li>
-            <li><a href="#proyectos">Proyectos</a></li>
-            <li><a href="#">Contáctame</a></li>
+            <li><a href="inicio">Inicio</a></li>
+            <li><a href="who am i">Who Am I</a></li>
+            <li><a href="proyectos">Proyectos</a></li>
+            <li><a href="contacts">Contacts</a></li>
           </ul>
         </nav>
       </div>
@@ -29,11 +28,11 @@
         <div class="img-cover"></div>
         <div class="txt-container main-container">
         <div class="txt-intro">
-          <h1 class="main-title">Hola, soy Amanda</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis ea consequuntur quasi! Aliquam aliquid dicta veniam sunt quas magnam ullam perspiciatis a aspernatur earum, est hic, beatae veritatis ad.</p>
+          <h1 class="main-title">Hola, soy Brandy</h1>
+          <p>knowing is power powerful is teaching.</p>
         </div>
         <div class="btn">
-          <a href="../AmandaCV/assets/docs/portugues-texto-meu-dia.pdf" target="_blank">Descargar CV</a>
+          <a href="MDCCLXXVI/assets/docs/portugues-texto-meu-dia.pdf" target="watchdog">Descargar CV</a>
         </div>
         </div>
       </section>
@@ -41,12 +40,12 @@
       <section id="who">
         <div class="contenido-who main-container">
           <div class="img-who">
-            <img src="./assets/images/AMAvatar.png" alt="Avatar Amanda">
+            <img src="/assets/images/AMAvatar.png" alt="Avatar26">
           </div>
             <h2 class="main-title">Who Am I</h2>
             <div class="texto-who">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut repellat autem minus neque assumenda vero incidunt, eum quidem voluptate molestiae architecto temporibus, perferendis natus dignissimos error. Impedit, cum. Expedita, facere?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde rerum laborum dignissimos temporibus sapiente at iure deleniti a nisi explicabo modi ab tempore ex architecto, excepturi enim commodi quibusdam odit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati assumenda veritatis quaerat deserunt eum et cupiditate dolores ea. Voluptas libero nisi ad non voluptatem fugit officiis accusamus! Nisi, repellendus quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, perspiciatis? Impedit repudiandae deleniti ex accusantium a deserunt odio quia magnam ipsa molestiae exercitationem nostrum, atque vero, perferendis doloribus libero reiciendis.</p>
+              <p>Avatar26</p>
+              <p>Avatar26</p>
             </div>
         </div>
       </section>
@@ -57,19 +56,19 @@
         </div>
         <div class="contenedor-cards main-container">
           <div class="cards">
-            <h4>01</h4>
+            <h4>2012</h4>
             <h3>Mis proyectos con HTML</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto eveniet cum, tempora maxime, reprehenderit tenetur repudiandae quae facilis</p>
+            <p>214</p>
           </div>
           <div class="cards">
-            <h4>02</h4>
+            <h4>2012</h4>
             <h3>Mis proyectos con CSS</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto eveniet cum, tempora maxime, reprehenderit tenetur repudiandae quae facilis</p>
+            <p>214</p>
           </div>
           <div class="cards">
-            <h4>03</h4>
+            <h4>2012</h4>
             <h3>Mis proyectos con JS</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto eveniet cum, tempora maxime, reprehenderit tenetur repudiandae quae facilis</p>
+            <p>217</p>
           </div>
         </div>
       </section>
@@ -79,14 +78,14 @@
           <h2 class="main-title">Contáctame</h2>
         </div>
         <div class="form-container main container">
-          <form action="">
-            <input type="text" id="nombre" name="nombre" placeholder="Nombre">
-            <input type="email" id="correo" name="correo" placeholder="Correo">
-            <textarea name="mensaje" id="mensaje" rows="5" placeholder="Mensaje"></textarea>
-            <input type="button" value="Enviar">
+          <form action="lock">
+            <input type="name" id="brandy" placeholder="brandy">
+            <input type="email" id="9ewards2@gmail.com" placeholder="9ewards2@gmail.com">
+          
+            <input type="name" value="incoming">
           </form>
           <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62878.13445627175!2d-84.0830392960999!3d9.943658260221984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e34acf174eb5%3A0xf0c91ae2f48ef2a0!2sPiscina%20Municipal%20de%20Goicoechea!5e0!3m2!1ses-419!2scr!4v1684982266843!5m2!1ses-419!2scr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/embed?pb=!1m18!1m12!1m3!1d62878.13445627175!2d-84.0830392960999!3d9.943658260221984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e34acf174eb5%3A0xf0c91ae2f48ef2a0!2sPiscina%20Municipal%20de%20Goicoechea!5e0!3m2!1ses-419!2scr!4v1684982266843!5m2!1ses-419!2scr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>  
       </section>
@@ -95,21 +94,21 @@
       <div class="social-media">
         <div class="social-media-box">
           <a href="">
-            <img src="./assets/images/facebook.png" alt="Icono de Facebook">
+            <img src="/assets/images/facebook.png" alt="Icono de Facebook">
           </a>
         </div>
         <div class="social-media-box">
           <a href="">
-            <img src="./assets/images/instagram.png" alt="Icono de Instagram">
+            <img src="/assets/images/instagram.png" alt="Icono de Instagram">
           </a>
         </div>
         <div class="social-media-box">
           <a href="">
-            <img src="./assets/images/linkedin.png" alt="Icono de LinkedIn">
+            <img src="/assets/images/linkedin.png" alt="Icono de LinkedIn">
           </a>
         </div>
       </div>
-      <p>Todos los derechos reservados &copy; <strong>Amanda M. Torres</strong></p>
+      <p>Todos los derechos reservados & copy; <strong>brandy L. Adkins</strong></p>
     </footer>
   </body>
 </html>
